--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -3,8 +3,8 @@
   height: 100vh;
   background: url('landing-page-image3.png') no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
+
+  background-position: top;
 }
 
 .image-container {
@@ -16,6 +16,6 @@
 
 .landing-image {
   height: auto;
-  width: auto;
+  width: 80vw;
   cursor: pointer;
 }
