--- a/app/views/sandwiches/_like_button.html.erb
+++ b/app/views/sandwiches/_like_button.html.erb
@@ -1,5 +1,5 @@
-<div class="favorite-button mx-2" data-controller="favorite"  data-favorite-id="<%= sandwich.id %>" data-favorite-state="<%= current_user.favorited?(sandwich) %>" data-action="click->favorite#toggle">
-  <% if current_user.favorited?(sandwich) %>
+<div class="favorite-button mx-2" data-controller="favorite" data-favorite-id="<%= sandwich.id %>" data-favorite-state="<%= current_user.favorited?(sandwich) %>" data-action="click->favorite#toggle">
+  <% if sandwich.favorited_by?(current_user) %>
     <i class="fa-solid fa-heart text-danger"></i> <!-- Solid red heart -->
   <% else %>
     <i class="fa-regular fa-heart"></i> <!-- Regular black heart -->
