--- a/app/views/sandwiches/_sandwich_cards.html.erb
+++ b/app/views/sandwiches/_sandwich_cards.html.erb
@@ -1,19 +1,3 @@
-<% @sandwiches.each do |sandwich| %>
-  <div class="col-12 mb-3">
-    <%= link_to sandwich_path(sandwich), class: 'card-link' do %>
-      <div class="sandwich-card" data-sandwich-id="<%= sandwich.id %>" data-favorite-toggle-target="unliked"  data-id="<%= sandwich.id %>">
-        <%= image_tag 'burger.jpg', alt: 'Burger Image', class: 'sandwich-image' %>
-
-        <div class="sandwich-content">
-          <div class="sandwich-text">
-            <h5 class="card-title"><%= sandwich.name %></h5>
-          </div>
-
-          <%= link_to toggle_favorite_sandwich_path(sandwich), data: { turbo_method: :post }, class: 'favorite-button' do %>
-            <%= render 'sandwiches/like_button', sandwich: sandwich %>
-          <% end %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+<% sandwiches.each do |sandwich| %>
+  <%= render 'sandwiches/sandwich_card', sandwich: sandwich %>
 <% end %>
