--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -18,10 +18,8 @@
               <i class="fas fa-bars"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <button class="btn btn-outline-secondary dropdown-item" type="button"
-                      data-action="click->favorite-toggle#fire" data-turbo="false">
-                favorites
-              </button>
+              <%= link_to "Show Favorites", sandwiches_path(filter: "favorites"), data: { turbo_frame: "sandwiches_list" }, class: "btn btn-danger all-favorite-button dropdown-item" %>
+              <%= link_to "Show All", sandwiches_path, data: { turbo_frame: "sandwiches_list" }, class: "btn btn-secondary show-all-button dropdown-item" %>
             </div>
           </div>
         </div>
@@ -33,7 +31,11 @@
 
     <!-- Initial Sandwich Cards (renders all sandwiches if no search) -->
     <div class="row">
-      <%= render 'sandwiches/sandwich_cards', sandwiches: @sandwiches %>
+      <turbo-frame id="sandwiches_list">
+        <div id="sandwiches-container">
+          <%= render 'sandwiches/sandwich_cards', sandwiches: @sandwiches %>
+        </div>
+      </turbo-frame>
     </div>
   </div>
   <%# toggle_favorite_sandwich_path %>
