fixed issue with multiple letters now only cards refresh

--- a/app/views/sandwiches/_sandwich_cards.html.erb
+++ b/app/views/sandwiches/_sandwich_cards.html.erb
@@ -1,3 +1,7 @@
-<% sandwiches.each do |sandwich| %>
-  <%= render 'sandwiches/sandwich_card', sandwich: sandwich %>
-<% end %>
+<div id="search-results" data-search-target="results">
+  <div class="row">
+    <% @sandwiches.each do |sandwich| %>
+      <%= render partial: "sandwiches/sandwich_card", locals: { sandwich: sandwich } %>
+    <% end %>
+  </div>
+</div>
