--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <% unless controller_name == "landing" && action_name == "home" %>
-      <%= render "shared/navbar" %>
+      <%#= render "shared/navbar" %>
       <%= render "shared/bottom_navbar" %>
     <% end %>
 
