--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -23,10 +23,16 @@
           <i class="fas fa-question-circle"></i>
         </a>
       </li>
-      <li class="nav-item w-20 text-center">
-        <a class="nav-link btn profile-btn" href="#">
+      <li class="nav-item w-20 text-center" data-controller="popup_menu">
+        <button class="nav-link btn profile-btn" type="button"
+                data-action="click->popup_menu#toggle">
           <i class="fas fa-user"></i>
-        </a>
+        </button>
+        <div class="dropdown-menu dropdown-menu-end" data-popup_menu-target="menu">
+          <%= link_to "Action", "#", class: "dropdown-item" %>
+          <%= link_to "Another action", "#", class: "dropdown-item" %>
+          <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+        </div>
       </li>
     </ul>
   </div>
