--- a/app/assets/stylesheets/pages/_sandwiches_new.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_new.scss
@@ -80,7 +80,7 @@
 
 .growing-footer {
   width: 100%;
-  height: 50px;
+  height: 70px;
   position: fixed;
   bottom: 65px;
   background: #c9af94;
@@ -113,4 +113,52 @@
   opacity: 1;
   max-height: 100%;
   }
+}
+
+input[readonly] {
+  outline: none;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+input.no-outline:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.custom-placeholder::placeholder {
+  color: #6c757d;
+}
+
+input::placeholder {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+input[type="text"] {
+  font-family: 'Dancing Script', cursive;
+}
+
+input[type="date"] {
+  font-family: 'Dancing Script', cursive;
+}
+
+textarea.form-control.custom-description {
+  font-family: 'Dancing Script', cursive;
+  color: #007bff;
+  background-color: transparent;
+  box-shadow: none;
+  resize: none;
+  padding-left: 0px;
+  border: none;
+}
+
+textarea.form-control.custom-description:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+textarea.form-control.custom-description[readonly] {
+  outline: none;
+  background-color: transparent;
+  box-shadow: none;
 }
