--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -37,25 +37,71 @@
   </div>
 </div>
 
-<div class="growing-footer" data-controller=panel-pop-up data-action = "click->panel-pop-up#popup">
-  <p class="hover-text">Sandwich Patent</p>
+<div class="growing-footer" data-controller="panel-pop-up" data-action="click->panel-pop-up#popup">
+  <p class="hover-text" style="color: #6c757d; font-weight: bold; text-align: left; padding-left: 20px;">Document Description: <span style="color: black;">Sandwich Patent</span></p>
+  <p class="hover-text" style="color: #6c757d; font-weight: bold; text-align: left; padding-left: 20px;">Doc Code: P2801.RFS</p>
   <div class="hidden-content">
     <%= simple_form_for @sandwich, html: { multipart: true } do |f| %>
-      <div class="mb-3">
-        <%= f.input :name, label: "Sandwich Name", input_html: { class: 'form-control' } %>
+      <div style="border-radius: 10px; border: 3px solid #343a40; margin-bottom: 15px;">
+        <div class="row ms-0">
+          <div class="col-3 border-end border-2 border-dark" style="white-space: normal; word-wrap: break-word; overflow-wrap: break-word; max-height: 100%; display: flex; align-items: center; font-size: 0.8rem; color: #6c757d;">
+            Request for application of new original sandwich
+          </div>
+          <div class="col-9 ps-0">
+            <table class="w-100">
+              <tr>
+                <td class="px-2 border-dark border-start-2 border-bottom-2 text-end" style="color: black; font-weight: bold;">Sandwich Title</td>
+                <td class="px-2 border-dark border-2 border-top-0 border-end-0">
+                  <%= f.input :name, label: false, input_html: { class: 'border-0 w-100 bg-transparent text-primary no-outline custom-placeholder', placeholder: "Enter title", style: "position: relative; top: 10px; margin-left: -10px;" } %>
+                </td>
+              </tr>
+              <tr>
+                <td class="px-2 border-dark border-2 border-start-0 text-end" style="color: black; font-weight: bold;">Inventor</td>
+                <td class="px-2 border-dark border-2 border-end-0">
+                  <input type="text" value="<%= current_user.username %>" class="border-0 w-100 bg-transparent" readonly>
+                </td>
+              </tr>
+              <tr>
+                <td class="px-2 border-dark border-2 border-start-0 text-end" style="color: black; font-weight: bold;">Date</td>
+                <td class="px-2 border-dark border-2 border-end-0">
+                  <input type="date" id="dateField" class="border-0 w-100 bg-transparent" readonly>
+                </td>
+              </tr>
+              <script>
+                document.getElementById('dateField').valueAsDate = new Date();
+              </script>
+              <tr>
+                <td class="px-2 border-dark border-2 border-start-0 border-bottom-0 text-end" style="color: black; font-weight: bold;">Allergens</td>
+                <td class="px-2 border-dark border-2 border-end-0 border-bottom-0">
+                  <input type="text" placeholder="List allergens" class="border-0 w-100 bg-transparent">
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
 
-      <div class="mb-3">
-        <%= f.input :description, as: :text, label: "Sandwich Description:", input_html: { class: 'form-control', rows: 4 } %>
-      </div>
+      <div style="border-radius: 0px; border: 3px solid #343a40; margin-bottom: 15px;">
+        <div class="row ms-0">
+          <!-- Left Section (Smaller Box for "Upload Image") -->
+          <div class="col-4 p-2" style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start;">
+            <div class="p-2" style="border: 2px dotted #343a40; width: 100%; text-align: center; height: 110px;">
+              <h5>Upload Image</h5>
+            </div>
+            <%= f.input :photo, as: :file, label: "Choose an image", input_html: { class: 'form-control' } %>
+          </div>
 
-      <div class="mb-3">
-        <h3>Upload a Sandwich Photo:</h3>
-        <%= f.input :photo, as: :file, label: "Choose an image" %>
-      </div>
+          <div class="col-8 p-2">
+            <%= f.label :description, "Applicant hereby declares the inventorship of the following sandwich and describes their invention thusly:",
+              style: "display: flex; align-items: center; font-size: 0.8rem; text-align: left; word-wrap: break-word; overflow-wrap: break-word; color: #6c757d;" %>
+            <%= f.input :description, as: :text, label: false, input_html: { class: 'form-control custom-description', rows: 5, placeholder: "Description of your totally awesome, original sandwich..." } %>
+          </div>
+        </div>
 
-      <div class="mb-3">
-        <%= f.submit "Create Sandwich", class: "btn btn-primary w-100" %>
+        <!-- Create Sandwich Button at the Bottom -->
+        <div class="mb-3" style="display: flex; justify-content: center;">
+          <%= f.submit "Create Sandwich", class: "btn btn-primary w-100" %>
+        </div>
       </div>
     <% end %>
   </div>
