made the stylesheet and added classes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
 @import "pages/favorites";
 @import "pages/sandwiches_new";
 @import "pages/landing";
-@import "pages/bottom_footer"
+@import "pages/bottom_footer";
+@import "pages/user_show"
