--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,8 +1,21 @@
+.profile-background {
+  background: transparent;
+  color: rgb(255, 191, 0);
+  // border-radius: 8px;
+  // padding: 20px;
+  max-height: 80vh;
+  width: 100%;
+  overflow-y: auto;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  // margin: 10px 0px;
+}
+
 .profile-header {
   // display: flex;
   // justify-content: space-between;
   // align-items: center;
   // margin: 20px 0;
+  width: 100%;
 }
 
 .inner-banner {
@@ -12,13 +25,28 @@
   // margin: 20px 0;
 }
 
+.profile-header-image {
+  width: 100%;
+  // height: 100px;
+  // border-radius: 50%;
+  // object-fit: cover;
+}
+
 .license-card {
   margin: 10px 15px;
   border-radius: 12px;
   box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.1);
-  padding: 20px;
+  // padding: 20px;
   background-color: #D9D9D9;
   color: black;
+  padding: 0px 10px 10px 10px;
+  // height: 30%;
+}
+
+.profile-card-header {
+  font-weight: 800;
+  font-size: 25px;
+  font-family: "russo one", serif;
 }
 
 .diet-name {
@@ -39,13 +67,7 @@
 }
 
 .restriction-image {
-  // width: 100%;
-  // height: auto;
-  // border-top-left-radius: 15px;
-  // border-top-right-radius: 15px;
-  // border-bottom-left-radius: 0;
-  // border-bottom-right-radius: 0;
-  // object-fit: cover;
+  margin-right: 10px;
 }
 
 .allergy-list {
