--- a/app/views/sandwiches/_sandwich_card.html.erb
+++ b/app/views/sandwiches/_sandwich_card.html.erb
@@ -1,6 +1,6 @@
 <turbo-frame id="sandwich_<%= sandwich.id %>">
   <div class="col-12 mb-3">
-    <%= link_to sandwich_path(sandwich), class: 'card-link' do %>
+    <%= link_to sandwich_path(sandwich), data: {turbo_frame: "_top"}, class: 'card-link' do %>
       <div class="sandwich-card" data-sandwich-id="<%= sandwich.id %>" data-favorite-toggle-target="unliked" data-id="<%= sandwich.id %>">
         <%= image_tag 'burger.jpg', alt: 'Burger Image', class: 'sandwich-image' %>
 
