Sandwich Patent Styling v1

--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -50,16 +50,16 @@
             Request for application of new original sandwich
           </div>
           <div class="col-9 ps-0">
-            <table class="w-100">
+            <table class="w-100" style="table-layout: fixed;">
               <tr>
                 <td class="px-2 border-dark border-start-2 border-bottom-2 text-end" style="color: black; font-weight: bold;">Sandwich Title</td>
                 <td class="px-2 border-dark border-2 border-top-0 border-end-0">
-                  <%= f.input :name, label: false, input_html: { class: 'border-0 w-100 bg-transparent text-primary no-outline custom-placeholder', placeholder: "Enter title", style: "position: relative; top: 10px; margin-left: -10px;" } %>
+                  <%= f.input :name, label: false, input_html: { class: 'border-0 w-100 bg-transparent text-primary no-outline custom-placeholder', placeholder: "Type here...", style: "position: relative; top: 7px; margin-left: -10px;" } %>
                 </td>
               </tr>
               <tr>
                 <td class="px-2 border-dark border-2 border-start-0 text-end" style="color: black; font-weight: bold;">Inventor</td>
-                <td class="px-2 border-dark border-2 border-end-0">
+                <td class="px-1 border-dark border-2 border-end-0">
                   <input type="text" value="<%= current_user.username %>" class="border-0 w-100 bg-transparent" readonly>
                 </td>
               </tr>
@@ -86,13 +86,13 @@
       <div style="border-radius: 0px; border: 3px solid #343a40; margin-bottom: 15px;">
         <div class="row ms-0" data-controller="image-preview">
           <div class="col-4 p-2" style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start;">
-            <div class="p-2" style="border: 2px dotted #343a40; width: 100%; text-align: center; height: 110px; position: relative;">
+            <div class="p-2" style="border: 2px dotted #343a40; width: 100%; text-align: center; height: 110px; position: relative; margin-bottom: 10px;">
               <h5 style="margin-top: 30px; font-size: 0.8rem; color: #6c757d; font-weight: bold;">Attach image here</h5>
               <div id="imagePreviewContainer" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; display: flex; justify-content: center; align-items: center;">
                 <img id="imagePreview" src="" alt="Image preview" style="max-width: 110px; max-height: 105px; object-fit: contain; display: none; border: 2px solid #343a40; border-radius: 5px;" data-target="image-preview.previewImage" />
               </div>
             </div>
-            <%= f.input :photo, as: :file, label: "Choose an image", input_html: { class: 'form-control', id: 'imageInput', data: { action: 'change->image-preview#showPreview' } } %>
+            <%= f.input :photo, as: :file, label: false, input_html: { class: 'form-control', id: 'imageInput', data: { action: 'change->image-preview#showPreview' } } %>
           </div>
 
           <div class="col-8 p-2">
