--- a/app/assets/stylesheets/pages/_sandwiches_new.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_new.scss
@@ -12,8 +12,6 @@
   width: 100%;
   overflow-y: auto;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  margin: 10px 0px;
-  margin-bottom: 45px;
 }
 
 .quantity-input {
@@ -82,16 +80,15 @@
   width: 100%;
   height: 70px;
   position: fixed;
-  bottom: 65px;
-  background: url('bg_paper.png') no-repeat center center;
-  background-size: cover; /* Default background size */
-  background-position: center center; /* Ensuring the background is centered */
+  bottom: 60px;
+  background: url('bg_paper.png');
+  background-size: cover;
   text-align: center;
   color: white;
   transition: height 0.5s ease-in-out;
   overflow: hidden;
   z-index: 1000;
-  padding: 10px 0;
+  padding: 10px 5px;
 }
 
 .growing-footer .hover-text {
@@ -111,8 +108,6 @@
 .growing-footer.active {
   height: 465px;
   overflow-y: auto;
-  background-size: cover !important; /* Ensure background size is 'cover' even when expanded */
-  background-position: center center !important; /* Keep the background centered */
 
   .hidden-content {
     opacity: 1;
