--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -1,21 +1,21 @@
 <body class="sandwiches index">
   <div data-controller="search favorite-toggle" data-favorite-toggle-favorites="<%= current_user.favorited_by_type('Sandwich').map(&:id).to_json %>" class="container">
     <!-- Search Bar -->
-    <div class="row my-4">
+    <div class="row search-top">
       <div class="col-12 d-flex justify-content-between align-items-center">
-        <div class="input-group" data-search-target="form">
+        <div class="input-group search-container" data-search-target="form">
           <div class="input-group-prepend">
-            <button class="btn btn-outline-secondary" type="button">
-              <i class="fa-solid fa-magnifying-glass"></i>
+            <button class="btn" type="button">
+              <i class="fa-solid fa-magnifying-glass search-icons"></i>
             </button>
           </div>
 
-          <input type="text" class="form-control" placeholder="Search for sandwiches" data-action="keyup->search#fire" data-search-target="input" />
+          <input type="text" class="form-control search-input" placeholder="Search for sandwiches" data-action="keyup->search#fire" data-search-target="input" />
 
           <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button"
+            <button class="btn" type="button"
                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-turbo="false">
-              <i class="fas fa-bars"></i>
+              <i class="fas fa-bars search-icons"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Show Favorites", sandwiches_path(filter: "favorites"), data: { turbo_frame: "sandwiches_list" }, class: "btn btn-danger all-favorite-button dropdown-item" %>
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div id="search-results" data-search-target="results">
+    <div id="search-results" class="mt-50px" data-search-target="results">
       <turbo-frame id="sandwiches_list">
         <div id="sandwiches-container">
           <%= render partial: "sandwiches/sandwich_cards", locals: { sandwiches: @sandwiches } %>
