--- a/app/assets/stylesheets/pages/_sandwiches_new.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_new.scss
@@ -8,7 +8,7 @@
   color: rgb(255, 191, 0);
   border-radius: 8px;
   padding: 20px;
-  max-height: 80vh;
+  max-height: 82vh;
   width: 100%;
   overflow-y: auto;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -122,7 +122,7 @@
   position: fixed;
   bottom: 60px;
   background: url('bg_paper.png');
-  background-size: cover;
+  background-size: 100% 380px;
   text-align: center;
   color: white;
   transition: height 0.5s ease-in-out;
@@ -146,7 +146,7 @@
 }
 
 .growing-footer.active {
-  height: 465px;
+  height: 550px;
   overflow-y: auto;
 
   .hidden-content {
