Style signup - Now, email, password, etc is visible again. - Changed font color to rgb(255, 191, 0)

--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -28,10 +28,7 @@
 }
 
 .auth-button {
-  background-color: rgb(255, 191, 0);
-  color: black;
-  border: none;
-  padding: 8px 12px;
+  color: rgb(255, 191, 0);
   cursor: pointer;
   border-radius: 4px;
 }
