Add username as required field for signup - Now a newly created user can see his name as inventor when creating a sandwich

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,10 @@
                 autofocus: true,
                 input_html: { autocomplete: "email", class: "login-input" },
                 label_html: { class: "login-label" } %>
+    <%= f.input :username,  # Added username field
+                required: true,
+                input_html: { class: "login-input" },
+                label_html: { class: "login-label" } %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
